# cine

./: .gitignore  README.md  TODO.txt  db-create-search.py  db-create.py  dev-requirements.txt  pygraphviz_example.py  pyproject.toml  run-coverage.sh  run-tests.sh  sample-data-creation.sh  setup.py  simple.dot
archive/: create_symlinks.py  metadata.py  movie_titles.txt  update_cache.py
archive/test/: test_collection.py  test_metadata.py
cine/: __init__.py  database.py  db.py  importer.py  readers.py  tables.py  utils.py
cine/archive/: cache.json  collection.py  import_movies.py  importer.py  util.py
cine/archive/db/: db.py  importer.py
cine/archive/test/: test_importer.py  test_util.py
doc/: Makefile  code.rst  collection.rst  conf.py  index.rst  introduction.rst  notes.txt
docs/images/: database_tables.xmi
docs/source/: api.rst  conf.py  index.rst  introduction.rst
tests/: __init__.py  data.py  test_database.py  test_db.py  test_readers.py  test_tables.py  test_utils.py
tests/data/: .gitignore  README.txt
